Correct layout issues, remove well class from js

--- a/cfgov/unprocessed/apps/youth-employment-success/css/main.less
+++ b/cfgov/unprocessed/apps/youth-employment-success/css/main.less
@@ -100,7 +100,7 @@
    * all the case in which all form fields are visible and the user's to-do list
    * is populated.
   */
-  overflow-y: visible !important;
+  max-height: 1600px;
 }
 
 .o-expandable__padded .o-expandable_content:after {
